tilted title image

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,11 @@
     font-family: 'Seymour One', sans-serif;
     font-size: 45px;
 }
+
+.title-image {
+    width: 22%;
+    transform: rotate(25deg);
+    position: absolute;
+    left: 50%;
+    padding-top: 3%;
+}
