Changed font of feature title and text

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,3 +48,15 @@
     margin-bottom: 30px;
     font-size: 70px;
 }
+
+.feature-title {
+    font-family: 'Seymour One', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 1.5;
+}
+
+.feature-text {
+    font-family: 'Comfortaa', cursive;
+    line-height: 1.5;
+}
