Changed socials and copyright font size and padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,3 +159,18 @@
     font-weight: 300px;
     text-align: center;
 }
+
+.socials span+span{
+    padding-left: 5%;
+}
+
+.socials {
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 2%;
+}
+
+#copyright {
+    text-align: center;
+    padding-bottom: 2%;
+}
