--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body{
 .testimonial-image {
     width: 15%;
     border-radius: 100%;
-    margin: 20px;
+    margin: 20px, 20px, 20px, 0;
 }
 
 #press{
@@ -111,7 +111,8 @@ body{
 .press-logo {
     width: 8%;
     max-height: 200px;
-    margin: 20px 20px 50px;
+    margin: 0px 20px 50px;
+    
 }
 
 #pricing {
