--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:ital,wght@0,100;1,100&family=Seymour+One&display=swap');
 
-body{
-    text-align: center;
-}
 
 .purple-bg {
     background-color: rgb(106, 58, 236);
@@ -82,6 +79,14 @@ body{
 
 .carousel-item{
     text-align: center;
+}
+
+.testimonial-icon-left{
+    color:white;
+    font-size: 50px;
+    margin-left: 180px;
+    margin-top: 100px;
+   
 }
 
 .testimonial-text {
