--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:ital,wght@0,100;1,100&family=Seymour+One&display=swap');
 
-
+/*Background coloring*/
 .purple-bg {
     background-color: rgb(106, 58, 236);
 }
@@ -14,6 +14,7 @@
     padding: 7% 15%;
 }
 
+/* Title Properties */
 #title .container-fluid{
     padding: 4% 15% 8%;
 }
@@ -34,7 +35,7 @@
 }
 
 
-/* Navigation Bar */
+/* Navbar Properties */
   
 .navbar-brand {
     font-family: 'Seymour One', sans-serif;
@@ -52,7 +53,7 @@
     font-family: 'Seymour One', sans-serif;
 }
 
-
+/* Features Properties */
 #features {
     position: relative;
     text-align: center;
@@ -77,6 +78,7 @@
     line-height: 1.5;
 }
 
+/* Testimonials Properties */
 .carousel-item{
     text-align: center;
 }
@@ -85,8 +87,7 @@
     color:white;
     font-size: 50px;
     margin-left: 180px;
-    margin-top: 100px;
-   
+    margin-top: 100px;  
 }
 
 .testimonial-text {
@@ -95,7 +96,7 @@
     color: white;
     font-family: 'Comfortaa', cursive;
     font-style: italic;
-  }
+}
 
 .testimonial-location {
     color: white;
@@ -110,6 +111,7 @@
     margin: 20px, 20px, 20px, 0;
 }
 
+/* Press Properties */
 #press{
     text-align: center;
 }
@@ -121,6 +123,7 @@
     
 }
 
+/* Pricing Table Properties */
 #pricing {
     padding: 70px;
     text-align: center;
@@ -155,6 +158,7 @@
     font-size: 20px;
 }
 
+/* CTA Properties */
 #cta .container-fluid{
     text-align: center;
     padding: 5%
@@ -176,6 +180,7 @@
     text-align: center;
 }
 
+/* Footer Properties */
 .socials span+span{
     padding-left: 5%;
 }
@@ -191,6 +196,7 @@
     padding-bottom: 2%;
 }
 
+/* Media Quering */
 @media (max-width: 1028px) {
     .title-image{
         transform: rotate(0);
@@ -218,5 +224,4 @@
     .top-buttons{
         text-align: center;
     }
-
 }
