--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,10 @@
     font-size: 20px;
 }
 
+.button-margin{
+    margin-top: 12%;
+}
+
 /* CTA Properties */
 #cta .container-fluid{
     text-align: center;
