--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,8 @@
 }
 
 .feature-title {
-    font-family: 'Seymour One', sans-serif;
-    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
     font-weight: bold;
     line-height: 1.5;
 }
