--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Poppins:wght@800;900&family=Raleway:ital,wght@0,100;1,100&family=Seymour+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Poppins:ital,wght@0,800;0,900;1,800;1,900&family=Raleway:ital,wght@0,100;1,100&family=Seymour+One&display=swap');
 
 /*Background coloring*/
 
